--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,7 @@
 			<artifactId>lombok</artifactId>
 			<optional>true</optional>
 		</dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
@@ -81,7 +82,12 @@
 			<artifactId>querydsl-mongodb</artifactId>
 			<version>${querydsl-mongodb}</version> <!-- Use the latest version available -->
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>org.hibernate.orm</groupId>
+            <artifactId>hibernate-core</artifactId>
+            <version>6.3.1.Final</version>
+        </dependency>
+    </dependencies>
 
 	<build>
 		<plugins>
