--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,5 +5,8 @@ spring.data.mongodb.database=ecomdbmongo
 
 #spring.resources.add-mappings=false
 
+project.image=src/main/resources/static/images/
+
+#project.image=classpath:/static/images/
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
